# Lixplore_cli

./: .crossref  .gitignore  .lixplore_cache.json  404.html  ANNOTATION_SYSTEM_GUIDE.md  AUDIT_SUMMARY.md  CHANGELOG.md  DEMO_WORKFLOW.md  DEPLOYMENT_CHECKLIST.txt  DEPLOYMENT_GUIDE.md  DOCS_README.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_COMPLETE.md  ENHANCED_TUI_GUIDE.md  FINAL_FEATURE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FLAGS_REFERENCE.md  GITHUB_PUSH_READY.md  HISTORY_FEATURE_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODES_GUIDE.md  MODE_COMPARISON_ANALYSIS.md  NEW_FEATURES_GUIDE.md  PACKAGE_DEPLOYMENT_SUMMARY.md  PROGRESS_SUMMARY.md  QUICK_DEPLOY.md  QUICK_START_DOCS.txt  QUICK_START_INTERACTIVE.md  README.md  ROADMAP.md  SEO_OPTIMIZATION_GUIDE.md  TEST_RESULTS.md  TODO_v1.1.0_PLUGIN_SYSTEM.md  TROUBLESHOOTING_REPORT.md  TUI_COMMAND_REFERENCE.md  TUI_MODE_GUIDE.md  config.json  demo_shell_mode.py  (+17 more)
.github/workflows/: publish.yml  test.yml
about/changelog/: index.html
about/contributing/: index.html
about/faq/: index.html
about/license/: index.html
advanced/ai-integration/: index.html
advanced/automation/: index.html
advanced/custom-apis/: index.html
advanced/profiles/: index.html
advanced/zotero/: index.html
docs/: README.md  lixplore.1  lixplore.tldr
docs/getting-started/: installation.md
examples/automation-examples/: index.html
examples/integrations/: index.html
examples/use-cases/: index.html
examples/workflows/: index.html
getting-started/basic-usage/: index.html
getting-started/first-search/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/annotations/: index.html
guide/export/: index.html
guide/filtering/: index.html
guide/interactive/: index.html
guide/pdf/: index.html
guide/search/: index.html
guide/search-sources/: index.html
lixplore/: cli.py  commands.py  dispatcher.py  index.html
lixplore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lixplore/utils/: custom_apis.py  enrichment.py  export.py  interactive_tui.py  pdf_downloader.py  profiles.py  reference_managers.py  statistics.py  terminal.py
reference/annotation-flags/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
(+45 files in other folders)
