[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lixplore"
version = "1.0.0"
description = "Academic Literature Search & Export CLI Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Lixplore Contributors", email = "lixplore@example.com"}
]
maintainers = [
    {name = "Lixplore Contributors", email = "lixplore@example.com"}
]
keywords = [
    "literature",
    "search",
    "academic",
    "pubmed",
    "arxiv",
    "crossref",
    "research",
    "papers",
    "export",
    "bibliography",
    "scientific",
    "citations"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
]
dependencies = [
    "biopython>=1.79",
    "requests>=2.25.0",
    "litstudy>=1.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/lixplore"
Documentation = "https://github.com/yourusername/lixplore#readme"
Repository = "https://github.com/yourusername/lixplore"
"Bug Tracker" = "https://github.com/yourusername/lixplore/issues"

[project.scripts]
lixplore = "lixplore.cli:main"

[tool.setuptools]
packages = ["lixplore", "lixplore.sources", "lixplore.utils"]

[tool.setuptools.package-data]
lixplore = ["py.typed"]
